syntax = "proto3";

package nexa.authentication.v1;
option go_package = "nexa/proto/gen/go/authentication/v1";

import "google/protobuf/empty.proto";

service CredentialService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (google.protobuf.Empty);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetCredentials(GetCredentialsRequest) returns (GetCredentialsResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc LogoutAll(LogoutAllRequest) returns (google.protobuf.Empty);
}

message Credential{
  string id = 1;
  string device = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string device_name = 3;
}

message LoginResponse {
  string token_type = 1;
  string access_token = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  optional string lastName = 5;
  optional string bio = 6;
}

message RefreshTokenRequest {
  string type = 1;
  string accessToken = 2;
}

message RefreshTokenResponse {
  string type = 1;
  string accessToken = 2;
}

message GetCredentialsRequest {
  string userId = 1;
}

message GetCredentialsResponse {
  repeated Credential creds = 1;
}

message LogoutRequest {
  optional string user_id = 1; // Allow super role to be able delete arbitrary credentials
  repeated string cred_ids = 2;
}

message LogoutAllRequest {
  string userId = 1;
}