syntax = "proto3";
package services.authentication.schema.proto.v1;
option go_package = "nexa/services/authentication/shared/proto";

import "google/protobuf/empty.proto";

service Credential {
  rpc Login(LoginInput) returns (LoginOutput);
  rpc Register(RegisterInput) returns (google.protobuf.Empty);
  rpc RefreshToken(RefreshTokenInput) returns (RefreshTokenOutput);
  rpc GetCredentials(google.protobuf.Empty) returns (GetCredentialsOutput);
  rpc Logout(LogoutInput) returns (google.protobuf.Empty);
  rpc LogoutAll(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message CredentialResponse {
  string id = 1;
  string device = 2;
}

message LoginInput {
  string email = 1;
  string password = 2;
}

message LoginOutput {
  string accessToken = 1;
}

message RegisterInput {
  string username = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  optional string lastName = 5;
  optional string bio = 6;
}

message RefreshTokenInput {
  string accessToken = 1;
}

message RefreshTokenOutput {
  string accessToken = 2;
}

//message GetCredentialsInput {
//  optional string userId = 1;
//}

message GetCredentialsOutput {
  repeated CredentialResponse creds = 1;
}

message LogoutInput {
  repeated string credIds = 1;
}

//message LogoutAllInput {
//  optional string userId = 1;
//}